[gd_scene load_steps=4 format=3 uid="uid://bm5hl7ikpsnyc"]

[ext_resource type="Script" path="res://explosion_area.gd" id="1_laa2d"]
[ext_resource type="PackedScene" uid="uid://b6dc0p2535h3v" path="res://explosion.tscn" id="2_bsdlp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d1tvb"]

[node name="ExplosionArea" type="Area2D"]
script = ExtResource("1_laa2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_d1tvb")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 0.06
one_shot = true
autostart = true

[node name="Explosion" parent="." instance=ExtResource("2_bsdlp")]
scale = Vector2(4, 4)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]

[editable path="Explosion"]
